Added logging using puppy library. Relocating files, Added db migrations
